// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders collapsed 1`] = `
<View
  style={
    Object {
      "borderBottomWidth": 0,
      "borderColor": "#9EABBC",
      "borderLeftWidth": 0,
      "borderRightWidth": 0,
      "borderTopWidth": 0,
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomWidth": 0,
        "borderColor": "#9EABBC",
        "borderLeftWidth": 0,
        "borderRightWidth": 0,
        "borderTopWidth": 0,
        "justifyContent": "center",
        "marginBottom": 32,
        "marginTop": 32,
      }
    }
  >
    <View
      accessibilityComponentType="button"
      accessibilityLabel={undefined}
      accessibilityTraits={
        Array [
          "button",
        ]
      }
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderBottomLeftRadius": 15,
          "borderBottomRightRadius": 15,
          "borderBottomWidth": 0,
          "borderColor": "#9EABBC",
          "borderLeftWidth": 0,
          "borderRightWidth": 0,
          "borderTopLeftRadius": 15,
          "borderTopRightRadius": 15,
          "borderTopWidth": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "marginBottom": 4.8,
          "marginTop": 4.8,
          "opacity": 1,
          "paddingBottom": 8,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 8,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "#FFFFFF",
            "borderBottomWidth": 0,
            "borderColor": "#9EABBC",
            "borderLeftWidth": 0,
            "borderRightWidth": 0,
            "borderTopWidth": 0,
            "color": "#748294",
            "fontFamily": "SF Pro Text",
            "fontSize": 13,
            "fontWeight": "700",
            "lineHeight": 16,
          }
        }
      >
        SWAP OUT THIS ACTIVITY
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#EDF1FA",
        "borderBottomWidth": 0,
        "borderColor": "#9EABBC",
        "borderLeftWidth": 0,
        "borderRightWidth": 0,
        "borderTopWidth": 0,
        "flex": 1,
        "justifyContent": "center",
        "marginTop": 16,
        "paddingBottom": 16,
        "paddingTop": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#EDF1FA",
          "borderBottomWidth": 0,
          "borderColor": "#9EABBC",
          "borderLeftWidth": 0,
          "borderRadius": 37.5,
          "borderRightWidth": 0,
          "borderTopWidth": 0,
          "height": 75,
          "justifyContent": "center",
          "marginTop": -45,
          "width": 75,
        }
      }
    >
      <View
        shadowOffset={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        shadowOpacity={0.5}
        shadowRadius={2}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "borderBottomWidth": 0,
            "borderColor": "#9EABBC",
            "borderLeftWidth": 0,
            "borderRadius": 37.5,
            "borderRightWidth": 0,
            "borderTopWidth": 0,
            "justifyContent": "center",
            "padding": 10,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#EDF1FA",
              "borderBottomWidth": 0,
              "borderColor": "#9EABBC",
              "borderLeftWidth": 0,
              "borderRadius": 15,
              "borderRightWidth": 0,
              "borderTopWidth": 0,
              "bottom": 0,
              "height": 30,
              "left": 0,
              "marginBottom": -30,
              "position": "relative",
              "width": 30,
            }
          }
        />
        <Image
          source={1}
          style={
            Object {
              "borderBottomWidth": 0,
              "borderColor": "#9EABBC",
              "borderLeftWidth": 0,
              "borderRightWidth": 0,
              "borderTopWidth": 0,
              "height": 32,
              "width": 37.89473684210526,
            }
          }
        />
      </View>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "borderBottomWidth": 0,
          "borderColor": "#9EABBC",
          "borderLeftWidth": 0,
          "borderRightWidth": 0,
          "borderTopWidth": 0,
          "color": "#EA3154",
          "fontFamily": "SF Pro Text",
          "fontSize": 13,
          "fontWeight": "700",
          "letterSpacing": -0.19,
          "lineHeight": 16,
        }
      }
    >
      Gross Motor 1
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "borderBottomWidth": 0,
          "borderColor": "#9EABBC",
          "borderLeftWidth": 0,
          "borderRightWidth": 0,
          "borderTopWidth": 0,
          "color": "#454D56",
          "fontFamily": "SF Pro Text",
          "fontSize": 19.147659412894374,
          "letterSpacing": -0.43,
          "lineHeight": 24,
          "marginTop": 8,
        }
      }
      textAlign="center"
    >
      Adjust the level of activity for 
      Ruby
      :
    </Text>
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "#FFFFFF",
          "borderBottomLeftRadius": 4,
          "borderBottomRightRadius": 4,
          "borderBottomWidth": 0,
          "borderColor": "#9EABBC",
          "borderLeftWidth": 0,
          "borderRightWidth": 0,
          "borderTopLeftRadius": 4,
          "borderTopRightRadius": 4,
          "borderTopWidth": 0,
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "marginBottom": 16,
          "marginLeft": 16,
          "marginRight": 16,
          "marginTop": 16,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 3,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "borderBottomWidth": 0,
            "borderColor": "#9EABBC",
            "borderLeftWidth": 0,
            "borderRightWidth": 0,
            "borderTopWidth": 0,
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={false}
          disabled={false}
          ellipsizeMode="tail"
          id={undefined}
          style={
            Array [
              Object {
                "color": undefined,
                "fontSize": 30,
              },
              Array [
                Object {
                  "textAlign": "center",
                },
                Object {
                  "alignSelf": "center",
                  "borderColor": "#CFD6DF",
                  "borderRadius": 22.5,
                  "borderWidth": 1,
                  "color": "#EA3154",
                  "height": 45,
                  "marginBottom": 10,
                  "paddingVertical": 9,
                  "width": 45,
                },
              ],
              Object {
                "fontFamily": "Ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
            ]
          }
        >
          
        </Text>
        <View
          style={
            Object {
              "alignSelf": "flex-start",
              "borderBottomWidth": 0,
              "borderColor": "#9EABBC",
              "borderLeftWidth": 0,
              "borderRightWidth": 0,
              "borderTopWidth": 0,
              "flex": 1,
              "justifyContent": "space-between",
              "marginLeft": 16,
              "marginRight": 16,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "borderBottomWidth": 0,
                "borderColor": "#9EABBC",
                "borderLeftWidth": 0,
                "borderRightWidth": 0,
                "borderTopWidth": 0,
                "color": "#454D56",
                "flex": 1,
                "fontFamily": "SF Pro Text",
                "fontSize": 13,
                "fontWeight": "700",
                "lineHeight": 16,
              }
            }
          >
            JUST RIGHT FOR NOW
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "borderBottomWidth": 0,
                "borderColor": "#9EABBC",
                "borderLeftWidth": 0,
                "borderRightWidth": 0,
                "borderTopWidth": 0,
                "color": "#748294",
                "fontFamily": "SF Pro Text",
                "fontSize": 13,
                "lineHeight": 16,
              }
            }
          >
            No change
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "flex-end",
            "borderBottomWidth": 0,
            "borderColor": "#9EABBC",
            "borderLeftWidth": 0,
            "borderRightWidth": 0,
            "borderTopWidth": 0,
            "flex": 1,
          }
        }
      >
        <View
          accessibilityComponentType="button"
          accessibilityLabel={undefined}
          accessibilityTraits={
            Array [
              "button",
            ]
          }
          accessible={true}
          collapsable={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignSelf": "flex-end",
              "backgroundColor": "#EA3154",
              "borderBottomLeftRadius": 15,
              "borderBottomRightRadius": 15,
              "borderBottomWidth": 0,
              "borderColor": "#9EABBC",
              "borderLeftWidth": 0,
              "borderRightWidth": 0,
              "borderTopLeftRadius": 15,
              "borderTopRightRadius": 15,
              "borderTopWidth": 0,
              "flexDirection": "row",
              "justifyContent": "center",
              "marginBottom": 4.8,
              "marginTop": 4.8,
              "opacity": 1,
              "paddingBottom": 3.2,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 3.2,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "backgroundColor": "#EA3154",
                "borderBottomWidth": 0,
                "borderColor": "#9EABBC",
                "borderLeftWidth": 0,
                "borderRightWidth": 0,
                "borderTopWidth": 0,
                "color": "#FFFFFF",
                "fontFamily": "SF Pro Text",
                "fontSize": 14.791111111111112,
                "fontWeight": "700",
                "lineHeight": 16,
              }
            }
          >
            CHANGE
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`it renders expanded for the level action adjust cards 1`] = `
<View
  style={
    Object {
      "borderBottomWidth": 0,
      "borderColor": "#9EABBC",
      "borderLeftWidth": 0,
      "borderRightWidth": 0,
      "borderTopWidth": 0,
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomWidth": 0,
        "borderColor": "#9EABBC",
        "borderLeftWidth": 0,
        "borderRightWidth": 0,
        "borderTopWidth": 0,
        "justifyContent": "center",
        "marginBottom": 32,
        "marginTop": 32,
      }
    }
  >
    <View
      accessibilityComponentType="button"
      accessibilityLabel={undefined}
      accessibilityTraits={
        Array [
          "button",
        ]
      }
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderBottomLeftRadius": 15,
          "borderBottomRightRadius": 15,
          "borderBottomWidth": 0,
          "borderColor": "#9EABBC",
          "borderLeftWidth": 0,
          "borderRightWidth": 0,
          "borderTopLeftRadius": 15,
          "borderTopRightRadius": 15,
          "borderTopWidth": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "marginBottom": 4.8,
          "marginTop": 4.8,
          "opacity": 1,
          "paddingBottom": 8,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 8,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "#FFFFFF",
            "borderBottomWidth": 0,
            "borderColor": "#9EABBC",
            "borderLeftWidth": 0,
            "borderRightWidth": 0,
            "borderTopWidth": 0,
            "color": "#748294",
            "fontFamily": "SF Pro Text",
            "fontSize": 13,
            "fontWeight": "700",
            "lineHeight": 16,
          }
        }
      >
        SWAP OUT THIS ACTIVITY
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#EDF1FA",
        "borderBottomWidth": 0,
        "borderColor": "#9EABBC",
        "borderLeftWidth": 0,
        "borderRightWidth": 0,
        "borderTopWidth": 0,
        "flex": 1,
        "justifyContent": "center",
        "marginTop": 16,
        "paddingBottom": 16,
        "paddingTop": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#EDF1FA",
          "borderBottomWidth": 0,
          "borderColor": "#9EABBC",
          "borderLeftWidth": 0,
          "borderRadius": 37.5,
          "borderRightWidth": 0,
          "borderTopWidth": 0,
          "height": 75,
          "justifyContent": "center",
          "marginTop": -45,
          "width": 75,
        }
      }
    >
      <View
        shadowOffset={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        shadowOpacity={0.5}
        shadowRadius={2}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "borderBottomWidth": 0,
            "borderColor": "#9EABBC",
            "borderLeftWidth": 0,
            "borderRadius": 37.5,
            "borderRightWidth": 0,
            "borderTopWidth": 0,
            "justifyContent": "center",
            "padding": 10,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#EDF1FA",
              "borderBottomWidth": 0,
              "borderColor": "#9EABBC",
              "borderLeftWidth": 0,
              "borderRadius": 15,
              "borderRightWidth": 0,
              "borderTopWidth": 0,
              "bottom": 0,
              "height": 30,
              "left": 0,
              "marginBottom": -30,
              "position": "relative",
              "width": 30,
            }
          }
        />
        <Image
          source={1}
          style={
            Object {
              "borderBottomWidth": 0,
              "borderColor": "#9EABBC",
              "borderLeftWidth": 0,
              "borderRightWidth": 0,
              "borderTopWidth": 0,
              "height": 32,
              "width": 37.89473684210526,
            }
          }
        />
      </View>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "borderBottomWidth": 0,
          "borderColor": "#9EABBC",
          "borderLeftWidth": 0,
          "borderRightWidth": 0,
          "borderTopWidth": 0,
          "color": "#EA3154",
          "fontFamily": "SF Pro Text",
          "fontSize": 13,
          "fontWeight": "700",
          "letterSpacing": -0.19,
          "lineHeight": 16,
        }
      }
    >
      Gross Motor 2
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "borderBottomWidth": 0,
          "borderColor": "#9EABBC",
          "borderLeftWidth": 0,
          "borderRightWidth": 0,
          "borderTopWidth": 0,
          "color": "#454D56",
          "fontFamily": "SF Pro Text",
          "fontSize": 19.147659412894374,
          "letterSpacing": -0.43,
          "lineHeight": 24,
          "marginTop": 8,
        }
      }
      textAlign="center"
    >
      Adjust the level of activity for 
      Ruby
      :
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomWidth": 0,
          "borderColor": "#9EABBC",
          "borderLeftWidth": 0,
          "borderRightWidth": 0,
          "borderTopWidth": 0,
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "marginLeft": 8,
          "marginRight": 8,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "alignItems": "stretch",
            "backgroundColor": "#FFFFFF",
            "borderBottomLeftRadius": 4,
            "borderBottomRightRadius": 4,
            "borderBottomWidth": 0,
            "borderColor": "#9EABBC",
            "borderLeftWidth": 0,
            "borderRightWidth": 0,
            "borderTopLeftRadius": 4,
            "borderTopRightRadius": 4,
            "borderTopWidth": 0,
            "flex": 1,
            "justifyContent": "center",
            "marginBottom": 16,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 32,
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
            "shadowColor": "#000",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.15,
            "shadowRadius": 3,
          }
        }
      >
        <View
          accessibilityComponentType="button"
          accessibilityLabel={undefined}
          accessibilityTraits={
            Array [
              "button",
            ]
          }
          accessible={true}
          collapsable={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "borderBottomLeftRadius": 15,
              "borderBottomRightRadius": 15,
              "borderBottomWidth": 0,
              "borderColor": "#9EABBC",
              "borderLeftWidth": 0,
              "borderRightWidth": 0,
              "borderTopLeftRadius": 15,
              "borderTopRightRadius": 15,
              "borderTopWidth": 0,
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
              "marginBottom": 4.8,
              "marginTop": 4.8,
              "opacity": 1,
              "paddingBottom": 3.2,
              "paddingTop": 3.2,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            disabled={false}
            ellipsizeMode="tail"
            id={undefined}
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 30,
                },
                Array [
                  Object {
                    "textAlign": "center",
                  },
                  Object {
                    "alignSelf": "center",
                    "borderColor": "#CFD6DF",
                    "borderRadius": 22.5,
                    "borderWidth": 1,
                    "color": "#EA3154",
                    "height": 45,
                    "marginBottom": 10,
                    "paddingVertical": 9,
                    "width": 45,
                  },
                ],
                Object {
                  "fontFamily": "Ionicons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            spacing={-0.31}
            style={
              Object {
                "borderBottomWidth": 0,
                "borderColor": "#9EABBC",
                "borderLeftWidth": 0,
                "borderRightWidth": 0,
                "borderTopWidth": 0,
                "color": "#454D56",
                "fontFamily": "SF Pro Text",
                "fontSize": 13,
                "fontWeight": "700",
                "letterSpacing": -0.88,
                "lineHeight": 16,
                "textAlign": "center",
              }
            }
          >
            NOT READY
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "borderBottomWidth": 0,
                "borderColor": "#9EABBC",
                "borderLeftWidth": 0,
                "borderRightWidth": 0,
                "borderTopWidth": 0,
                "color": "#748294",
                "fontFamily": "SF Pro Text",
                "fontSize": 13,
                "lineHeight": 16,
                "textAlign": "center",
              }
            }
          >
            Not quite ready for this
          </Text>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={
          Object {
            "alignItems": "stretch",
            "backgroundColor": "#FFFFFF",
            "borderBottomLeftRadius": 4,
            "borderBottomRightRadius": 4,
            "borderBottomWidth": 0,
            "borderColor": "#9EABBC",
            "borderLeftWidth": 0,
            "borderRightWidth": 0,
            "borderTopLeftRadius": 4,
            "borderTopRightRadius": 4,
            "borderTopWidth": 0,
            "flex": 1,
            "justifyContent": "center",
            "marginBottom": 16,
            "marginLeft": 8,
            "marginRight": 8,
            "marginTop": 32,
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
            "shadowColor": "#000",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.15,
            "shadowRadius": 3,
          }
        }
      >
        <View
          accessibilityComponentType="button"
          accessibilityLabel={undefined}
          accessibilityTraits={
            Array [
              "button",
            ]
          }
          accessible={true}
          collapsable={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "borderBottomLeftRadius": 15,
              "borderBottomRightRadius": 15,
              "borderBottomWidth": 0,
              "borderColor": "#9EABBC",
              "borderLeftWidth": 0,
              "borderRightWidth": 0,
              "borderTopLeftRadius": 15,
              "borderTopRightRadius": 15,
              "borderTopWidth": 0,
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
              "marginBottom": 4.8,
              "marginTop": 4.8,
              "opacity": 1,
              "paddingBottom": 3.2,
              "paddingTop": 3.2,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            disabled={false}
            ellipsizeMode="tail"
            id={undefined}
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 30,
                },
                Array [
                  Object {
                    "textAlign": "center",
                  },
                  Object {
                    "alignSelf": "center",
                    "borderColor": "#CFD6DF",
                    "borderRadius": 22.5,
                    "borderWidth": 1,
                    "color": "#EA3154",
                    "height": 45,
                    "marginBottom": 10,
                    "paddingVertical": 9,
                    "width": 45,
                  },
                ],
                Object {
                  "fontFamily": "Ionicons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            spacing={-0.31}
            style={
              Object {
                "borderBottomWidth": 0,
                "borderColor": "#9EABBC",
                "borderLeftWidth": 0,
                "borderRightWidth": 0,
                "borderTopWidth": 0,
                "color": "#454D56",
                "fontFamily": "SF Pro Text",
                "fontSize": 13,
                "fontWeight": "700",
                "letterSpacing": -0.88,
                "lineHeight": 16,
                "textAlign": "center",
              }
            }
          >
            JUST RIGHT FOR NOW
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "borderBottomWidth": 0,
                "borderColor": "#9EABBC",
                "borderLeftWidth": 0,
                "borderRightWidth": 0,
                "borderTopWidth": 0,
                "color": "#748294",
                "fontFamily": "SF Pro Text",
                "fontSize": 13,
                "lineHeight": 16,
                "textAlign": "center",
              }
            }
          >
            No change
          </Text>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={
          Object {
            "alignItems": "stretch",
            "backgroundColor": "#FFFFFF",
            "borderBottomLeftRadius": 4,
            "borderBottomRightRadius": 4,
            "borderBottomWidth": 0,
            "borderColor": "#9EABBC",
            "borderLeftWidth": 0,
            "borderRightWidth": 0,
            "borderTopLeftRadius": 4,
            "borderTopRightRadius": 4,
            "borderTopWidth": 0,
            "flex": 1,
            "justifyContent": "center",
            "marginBottom": 16,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 32,
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
            "shadowColor": "#000",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.15,
            "shadowRadius": 3,
          }
        }
      >
        <View
          accessibilityComponentType="button"
          accessibilityLabel={undefined}
          accessibilityTraits={
            Array [
              "button",
            ]
          }
          accessible={true}
          collapsable={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "borderBottomLeftRadius": 15,
              "borderBottomRightRadius": 15,
              "borderBottomWidth": 0,
              "borderColor": "#9EABBC",
              "borderLeftWidth": 0,
              "borderRightWidth": 0,
              "borderTopLeftRadius": 15,
              "borderTopRightRadius": 15,
              "borderTopWidth": 0,
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
              "marginBottom": 4.8,
              "marginTop": 4.8,
              "opacity": 1,
              "paddingBottom": 3.2,
              "paddingTop": 3.2,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            disabled={false}
            ellipsizeMode="tail"
            id={undefined}
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 30,
                },
                Array [
                  Object {
                    "textAlign": "center",
                  },
                  Object {
                    "alignSelf": "center",
                    "borderColor": "#CFD6DF",
                    "borderRadius": 22.5,
                    "borderWidth": 1,
                    "color": "#EA3154",
                    "height": 45,
                    "marginBottom": 10,
                    "paddingVertical": 9,
                    "width": 45,
                  },
                ],
                Object {
                  "fontFamily": "Ionicons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            spacing={-0.31}
            style={
              Object {
                "borderBottomWidth": 0,
                "borderColor": "#9EABBC",
                "borderLeftWidth": 0,
                "borderRightWidth": 0,
                "borderTopWidth": 0,
                "color": "#454D56",
                "fontFamily": "SF Pro Text",
                "fontSize": 13,
                "fontWeight": "700",
                "letterSpacing": -0.88,
                "lineHeight": 16,
                "textAlign": "center",
              }
            }
          >
            TOO EASY
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "borderBottomWidth": 0,
                "borderColor": "#9EABBC",
                "borderLeftWidth": 0,
                "borderRightWidth": 0,
                "borderTopWidth": 0,
                "color": "#748294",
                "fontFamily": "SF Pro Text",
                "fontSize": 13,
                "lineHeight": 16,
                "textAlign": "center",
              }
            }
          >
            Increase the level
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
